# whoop-write-api

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENDPOINTS.md  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-16-general-activity-logging.md  2026-03-18-cognito-auth-context-manager.md
docs/superpowers/specs/: 2026-03-16-general-activity-logging-design.md  2026-03-18-cognito-auth-context-manager-design.md
src/whoop/: __init__.py  auth.py  client.py  cognito.py  exceptions.py  models.py  read.py  sport_types.py  token_holder.py  write.py  write_exercises.py  write_journal.py  write_models.py
tests/: conftest.py  test_auth.py  test_client.py  test_client_auth.py  test_client_v2.py  test_cognito.py  test_exceptions.py  test_exercise_catalog.py  test_models.py  test_read.py  test_sport_types.py  test_write.py  test_write_models.py  test_write_models_v2.py  test_write_v2.py
tools/: capture.py
