[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whoop-write-api"
version = "0.1.0"
description = "Python client for Whoop API — official read + unofficial write endpoints"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/whoop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
